kube/prod/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpsf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rpsf
  template:
    metadata:
      labels:
        app: rpsf
    spec:
      containers:
        - image: ghcr.io/fourfridays/rosaparksscholarship.org:latest
          imagePullPolicy: Always
          name: rpsf
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: rpsf
  labels:
    app: rpsf
spec:
  selector:
    app: rpsf
  ports:
    - port: 8088
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpsf
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: rpsf.fourfridays.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rpsf
                port:
                  number: 8088
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rpsf-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`rpsf.fourfridays.com`)
      middlewares:
        - name: rpsf-gzip-compress
      services:
        - name: rpsf
          port: 8088
  tls: # This route uses TLS
    certResolver: le # Uses our certificate resolver to get a certificate automatically!
---
# Enable gzip compression
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rpsf-gzip-compress
spec:
  compress: {}
